--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,8 +13,13 @@
       "title": "Product Form",
       "name": "Name",
       "price": "Price",
-      "submit": "Submit"
-    }
+      "submit": "Submit",
+      "add": "Add Product",
+      "category": "Category"
+    },
+    "loading": "Loading...",
+    "error": "Error: ",
+    "search": "Search Products"
   },
   "unauthorized": {
     "title": "Unauthorized",
@@ -25,5 +30,71 @@
   "profile": "Profile",
   "settings": "Settings",
   "toggle_theme": "Toggle Theme",
-  "language": "Language"
+  "language": "Language",
+  "permission": {
+    "title": "Permission",
+    "confirm_deletion_title": "Confirm Deletion",
+    "confirm_deletion_message": "Are you sure you want to delete this permission?",
+    "sync": "Sync"
+  },
+  "sidebar": {
+    "dashboard": "Dashboard",
+    "master_data": "Master Data",
+    "products": "Products",
+    "users": "Users",
+    "permissions": "Permissions",
+    "test": "Test",
+    "login": "Login"
+  },
+  "settings_page": {
+    "title": "Settings Page"
+  },
+  "users_page": {
+    "title": "Users",
+    "table": {
+      "id": "ID",
+      "name": "Name",
+      "email": "Email",
+      "created_at": "Created At"
+    }
+  },
+  "login_page": {
+    "sign_in": "Sign in",
+    "username": "Username",
+    "password": "Password",
+    "remember_me": "Remember me",
+    "forgot_password": "Forgot password?",
+    "dont_have_account": "Don't have an account? Sign Up"
+  },
+  "permissions_data": {
+    "age": "Age",
+    "city": "City",
+    "filter_by_city": "Filter by City",
+    "state": "State",
+    "filter_by_state": "Filter by State",
+    "start_date": "Start Date",
+    "start_time": "Start Time",
+    "created_at": "Created At",
+    "notes": "Notes",
+    "tags": "Tags",
+    "filter_by_tags": "Filter by Tags",
+    "sample": "Sample"
+  },
+  "table_toolbar": {
+    "search_placeholder": "Search",
+    "toggle_column_visibility": "Toggle Column Visibility",
+    "toggle_all": "Toggle All",
+    "toggle_density": "Toggle Density",
+    "toggle_fullscreen": "Toggle Fullscreen",
+    "filter": "Filter",
+    "add": "Add",
+    "remove_selected": "Remove Selected"
+  },
+  "table_columns": {
+    "actions": "Actions",
+    "select_all": "Select All"
+  },
+  "clearable_text_field": {
+    "placeholder": "Enter text"
+  }
 }
